--- a/CalendarApp/CalendarApp/Base.lproj/Main.storyboard
+++ b/CalendarApp/CalendarApp/Base.lproj/Main.storyboard
@@ -31,7 +31,7 @@
                                 <items>
                                     <barButtonItem title="前へ" id="B5u-oW-t2q">
                                         <connections>
-                                            <action selector="tappedButtonMonthButton:" destination="BYZ-38-t0r" id="WIB-Je-gpQ"/>
+                                            <action selector="tappedBackMonthButton:" destination="BYZ-38-t0r" id="Xva-Tr-XHX"/>
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="gdl-Ru-R7I"/>
@@ -53,7 +53,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="cell" reuseIdentifier="cell" id="FYo-aj-UF6" customClass="CalendarCell">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="FYo-aj-UF6" customClass="CalendarCell" customModule="CalendarApp" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
@@ -76,7 +76,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="60" y="124"/>
+            <point key="canvasLocation" x="-537" y="93"/>
         </scene>
     </scenes>
 </document>
