--- a/CalendarApp/CalendarApp/Base.lproj/Main.storyboard
+++ b/CalendarApp/CalendarApp/Base.lproj/Main.storyboard
@@ -18,16 +18,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yEb-lA-HFX">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yEb-lA-HFX">
                                 <rect key="frame" x="0.0" y="20" width="375" height="54"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="54" id="JKx-xM-eN0"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0OM-YL-7hy">
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0OM-YL-7hy">
                                 <rect key="frame" x="0.0" y="623" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="69w-z5-6dZ"/>
+                                </constraints>
                                 <items>
                                     <barButtonItem title="前へ" id="B5u-oW-t2q">
                                         <connections>
@@ -42,9 +46,8 @@
                                     </barButtonItem>
                                 </items>
                             </toolbar>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ihy-ys-R3O">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ihy-ys-R3O">
                                 <rect key="frame" x="0.0" y="82" width="375" height="541"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="N6v-nI-Qln">
                                     <size key="itemSize" width="50" height="50"/>
@@ -65,6 +68,19 @@
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="ihy-ys-R3O" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="08M-bj-oAO"/>
+                            <constraint firstItem="0OM-YL-7hy" firstAttribute="top" secondItem="ihy-ys-R3O" secondAttribute="bottom" id="0Y6-sL-mWu"/>
+                            <constraint firstItem="0OM-YL-7hy" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="2nE-Lz-ZQO"/>
+                            <constraint firstItem="ihy-ys-R3O" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="3fA-gR-5Cy"/>
+                            <constraint firstItem="0OM-YL-7hy" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="A2Y-dl-mym"/>
+                            <constraint firstItem="yEb-lA-HFX" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Ni3-sa-aGo"/>
+                            <constraint firstItem="0OM-YL-7hy" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="T0s-Yo-8jM"/>
+                            <constraint firstItem="ihy-ys-R3O" firstAttribute="top" secondItem="yEb-lA-HFX" secondAttribute="bottom" constant="8" id="iPT-p8-ddJ"/>
+                            <constraint firstItem="yEb-lA-HFX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="ndd-gi-q1y"/>
+                            <constraint firstItem="yEb-lA-HFX" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="rSx-so-beF"/>
+                            <constraint firstItem="0OM-YL-7hy" firstAttribute="top" secondItem="ihy-ys-R3O" secondAttribute="bottom" id="uLc-Vh-TEw"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
@@ -76,7 +92,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-537" y="93"/>
+            <point key="canvasLocation" x="-538.39999999999998" y="92.203898050974516"/>
         </scene>
     </scenes>
 </document>
