--- a/CalendarApp/CalendarApp/View/Base.lproj/Main.storyboard
+++ b/CalendarApp/CalendarApp/View/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yEb-lA-HFX">
                                 <rect key="frame" x="0.0" y="20" width="375" height="54"/>
-                                <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="0.70069028249999998" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="54" id="JKx-xM-eN0"/>
                                 </constraints>
