--- a/CalendarApp/CalendarApp/CalendarApp/View/Base.lproj/Main.storyboard
+++ b/CalendarApp/CalendarApp/CalendarApp/View/Base.lproj/Main.storyboard
@@ -63,7 +63,22 @@
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                             <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YU9-77-zcR">
+                                                    <rect key="frame" x="4" y="14.5" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
                                         </view>
+                                        <constraints>
+                                            <constraint firstItem="YU9-77-zcR" firstAttribute="centerX" secondItem="FYo-aj-UF6" secondAttribute="centerX" id="cwR-3V-H0V"/>
+                                            <constraint firstItem="YU9-77-zcR" firstAttribute="centerY" secondItem="FYo-aj-UF6" secondAttribute="centerY" id="vN8-K6-OWH"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="dayLabel" destination="YU9-77-zcR" id="eBe-2J-rmN"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
@@ -93,7 +108,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1031" y="-18"/>
+            <point key="canvasLocation" x="-879" y="-18"/>
         </scene>
     </scenes>
 </document>
